# hifi

cmake/macros/: TargetNvapi.cmake
cmake/modules/: FindNvapi.cmake
interface/: CMakeLists.txt
interface/resources/qml/js/: Utils.jsc
interface/src/: Application.cpp  Application.h  LODManager.cpp  LODManager.h  Menu.cpp  SecondaryCamera.cpp  SecondaryCamera.h  Stars.cpp
interface/src/avatar/: Avatar.cpp  CauterizedModel.cpp
interface/src/graphics/: GraphicsEngine.cpp  GraphicsEngine.h
interface/src/ui/: ApplicationOverlay.cpp  ApplicationOverlay.h  DialogsManager.cpp  HMDToolsDialog.cpp  PreferencesDialog.cpp  Stats.cpp
interface/src/ui/overlays/: Image3DOverlay.cpp  Image3DOverlay.h  ModelOverlay.cpp  Overlay.h  Overlays.cpp  OverlaysPayload.cpp
interface/src/workload/: GameWorkloadRenderer.cpp  GameWorkloadRenderer.h
libraries/avatars-renderer/: CMakeLists.txt
libraries/avatars-renderer/src/avatars-renderer/: Avatar.cpp  Avatar.h
libraries/avatars-renderer/src/crowd/: Crowd.h  ElementBuffer.h  Engine.cpp  Engine.h  Flock.cpp  Flock.h  FlockRenderer.cpp  FlockRenderer.h  Prototype.cpp  Prototype.h  drawFlockRoots.slf  drawFlockRoots.slv
libraries/display-plugins/src/display-plugins/: Basic2DWindowOpenGLDisplayPlugin.cpp  OpenGLDisplayPlugin.cpp  OpenGLDisplayPlugin.h
libraries/display-plugins/src/display-plugins/hmd/: DebugHmdDisplayPlugin.cpp  HmdDisplayPlugin.cpp
libraries/entities-renderer/src/: EntityTreeRenderer.cpp  RenderableEntityItem.cpp  RenderableEntityItem.h  RenderableModelEntityItem.cpp  RenderableParticleEffectEntityItem.cpp  RenderablePolyVoxEntityItem.cpp  RenderablePolyVoxEntityItem.h  RenderableWebEntityItem.cpp  RenderableZoneEntityItem.cpp
libraries/fbx/src/: FBX.h  FBXReader_Material.cpp  FBXSerializer_Mesh.cpp  GLTFReader.cpp
libraries/gl/src/gl/: GLShaders.cpp  OffscreenQmlSurface.cpp  OffscreenQmlSurface.h
libraries/gpu-gl/: CMakeLists.txt
libraries/gpu-gl-common/src/gpu/gl/: GLBackend.cpp  GLBackend.h  GLBackendOutput.cpp  GLBackendState.cpp  GLBackendTransform.cpp  GLTexture.cpp  GLTexture.h
libraries/gpu-gl/src/gpu/gl/: GLBackend.cpp  GLBackend.h  GLBackendPipeline.cpp  GLBackendTransform.cpp  GLPipeline.cpp  GLShader.cpp  GLShader.h  GLShared.cpp  GLShared.h
libraries/gpu-gl/src/gpu/gl41/: GL41Backend.h  GL41BackendOutput.cpp  (+1 more)
libraries/gpu/src/gpu/: Batch.cpp  Batch.h  Buffer.h  Color.slh  Config.slh  Context.cpp  Context.h  DrawStereoTextureLayeredToSidebyside.slf  DrawStereoTextureOpaque.slf  DrawTextureOpaque.slf  DrawUnitQuadTexcoord.slv  DrawViewportQuadTransformTexcoord.slv  DrawViewportStereoTextureOpaque.slp  Forward.h  Framebuffer.cpp  Framebuffer.h  GLBackend.cpp  GLBackend.h  GLBackendBuffer.cpp  GLBackendInput.cpp  GLBackendPipeline.cpp  GLBackendState.cpp  GLBackendTransform.cpp  Image.cpp  Image.h  Resource.cpp  Resource.h  Stereo.slh  Stream.h  Texture.h  Transform.slh  drawTransformUnitQuadStereoTextureOpaque.slp
libraries/gpu/src/pr/: Path.cpp  Path.h  PathBuilder.cpp
libraries/graphics/src/graphics/: Light.cpp  Light.h  Light.slh  LightIrradiance.shared.slh  skybox.slv
libraries/hfm/src/hfm/: HFM.cpp  HFM.h  HFMModelMath.cpp  HFMModelMath.h
libraries/model-networking/src/model-networking/: ModelCache.cpp
libraries/model/src/model/: Material.cpp  Material.h  Material.slh  TextureMap.cpp  TextureMap.h
libraries/oculusMobilePlugin/src/: OculusMobileDisplayPlugin.cpp
libraries/render-utils/src/: AmbientOcclusionEffect.cpp  AnimDebugDraw.cpp  AntialiasingEffect.cpp  AssembleLightingStageTask.cpp  BlendshapeOffset.slh  BloomApply.slf  BloomEffect.cpp  BloomEffect.h  BloomThreshold.slf  DebugDeferredBuffer.h  DeferredBufferRead.slh  DeferredFrameTransform.cpp  DeferredFramebuffer.cpp  DeferredFramebuffer.h  DeferredGlobalLight.slh  DeferredLightingEffect.cpp  DeferredLightingEffect.h  DrawHaze.cpp  ForwardGlobalLight.slh  FramebufferCache.cpp  FramebufferCache.h  GeometryCache.cpp  GeometryCache.h  Haze.slf  HazePayload.cpp  HazePayload.h  Highlight.slh  HighlightEffect.cpp  HighlightEffect.h  Highlight_aabox.slv  LightClusters.cpp  LightClusters.h  LightPayload.cpp  LightPayload.h  LightingModel.cpp  LightingModel.h  LightingModel.slh  LightingModel_shared.slh  MaterialTextures.slh  MeshPartPayload.cpp  (+56 more)
libraries/render-utils/src/render-utils/: drawWorkloadProxy.slp  haze.slp  highlight.slp  highlight_filled.slp  skin_model_fade.slp
libraries/render/src/render/: Args.h  BlurTask.cpp  BlurTask.h  BlurTask.slh  CullTask.h  DrawSceneOctree.h  DrawStatus.h  DrawTask.cpp  DrawTask.h  Engine.h  FilterTask.h  IndexedContainer.h  Item.h  RenderFetchCullSortTask.cpp  ResampleTask.cpp  Scene.cpp  Scene.h  ShapePipeline.cpp  ShapePipeline.h  SortTask.cpp  SortTask.h  blurGaussianDepthAwareLayeredH.slf  blurGaussianDepthAwareLayeredV.slf  blurGaussianH.slf  blurGaussianLayeredH.slf  blurGaussianLayeredV.slf  blurGaussianLayeredV.slp
libraries/render/src/task/: Config.h
libraries/shaders/headers/: stereo.glsl
libraries/shaders/headers/450/: header.glsl
libraries/shared/src/: PIDController.cpp  PIDController.h  Preferences.cpp  Preferences.h
libraries/task/src/task/: Config.cpp  Config.h  Varying.h
libraries/ui/src/ui/: OffscreenQmlSurface.cpp
libraries/workload/src/workload/: Phase.h  Proxy.h  RegionState.cpp  RegionState.h  Space.cpp  Space.h  SpaceClassifier.cpp  SpaceClassifier.h  Transaction.cpp  Transaction.h  ViewTask.cpp  ViewTask.h
plugins/oculus/src/: OculusDisplayPlugin.cpp
plugins/openvr/src/: OpenVrDisplayPlugin.cpp
scripts/developer/utilities/render/: deferredLighting.qml  engineInspector.qml  holo.js  lod.qml  luci.js  luci.qml  luci2.js  renderStatsGPU.js  secondCam.qml  stats.qml  statsGPU.qml  textureMonitor.js  toneCurve.js  toneCurve.qml
scripts/developer/utilities/workload/: workloadView.js  workloadView.qml
tests/render-perf/src/: main.cpp
tools/scribe/: CMakeLists.txt
tools/scribe/src/: main.cpp
(+36 files in other folders)
